--- a/po/vi.po
+++ b/po/vi.po
@@ -4548,14 +4548,14 @@ msgid ""
 "If this is correct simply add it to the index for example\n"
 "by using:\n"
 "\n"
-"  git update-index --cacheinfo 160000 %s \"%s\"\n"
+"  git update-index --cacheinfo 160000,%s,\"%s\"\n"
 "\n"
 "which will accept this suggestion.\n"
 msgstr ""
 "Nếu đây là đúng đơn giản thêm nó vào mục lục ví dụ\n"
 "bằng cách dùng:\n"
 "\n"
-"  git update-index --cacheinfo 160000 %s \"%s\"\n"
+"  git update-index --cacheinfo 160000,%s,\"%s\"\n"
 "\n"
 "cái mà sẽ chấp nhận gợi ý này.\n"
 
