--- a/po/ca.po
+++ b/po/ca.po
@@ -4592,12 +4592,12 @@ msgid ""
 "If this is correct simply add it to the index for example\n"
 "by using:\n"
 "\n"
-"  git update-index --cacheinfo 160000 %s \"%s\"\n"
+"  git update-index --cacheinfo 160000,%s,\"%s\"\n"
 "\n"
 "which will accept this suggestion.\n"
 msgstr ""
 "Si això és correcte simplement afegiu-ho a l'índex per exemple utilitzant "
-"git update-index --cacheinfo 160000 per cents \"%s\" que acceptaran aquest "
+"  git update-index --cacheinfo 160000,%s,\"%s\" que acceptaran aquest "
 "suggeriment.\n"
 
 #: merge-recursive.c:1268
