--- a/po/es.po
+++ b/po/es.po
@@ -4572,14 +4572,14 @@ msgid ""
 "If this is correct simply add it to the index for example\n"
 "by using:\n"
 "\n"
-"  git update-index --cacheinfo 160000 %s \"%s\"\n"
+"  git update-index --cacheinfo 160000,%s,\"%s\"\n"
 "\n"
 "which will accept this suggestion.\n"
 msgstr ""
 "Si esto es correcto simplemente agrégalo al índice por ejemplo\n"
 "usando:\n"
 "\n"
-"  git update-index --cacheinfo 160000 %s \"%s\"\n"
+"  git update-index --cacheinfo 160000,%s,\"%s\"\n"
 "\n"
 "el cual aceptará esta sugerencia.\n"
 
