--- a/po/ko.po
+++ b/po/ko.po
@@ -2361,14 +2361,14 @@ msgid ""
 "If this is correct simply add it to the index for example\n"
 "by using:\n"
 "\n"
-"  git update-index --cacheinfo 160000 %s \"%s\"\n"
+"  git update-index --cacheinfo 160000,%s,\"%s\"\n"
 "\n"
 "which will accept this suggestion.\n"
 msgstr ""
 "이 제안이 맞으면 인덱스에 추가하면 됩니다. 예를 들어\n"
 "다음 명령을 사용하면:\n"
 "\n"
-"  git update-index --cacheinfo 160000 %s \"%s\"\n"
+"  git update-index --cacheinfo 160000,%s,\"%s\"\n"
 "\n"
 "제안을 받아들이게 됩니다.\n"
 
